fix open api spec
