# services/delivery/docs/swagger.yaml
@@ -1,8 +1,26 @@
 definitions:
-  types.BalanceResponse:
+  types.CourierReservation:
     properties:
-      balance:
-        type: number
+      action:
+        type: string
+      courier_id:
+        type: integer
+      ctime:
+        type: string
+      end_time:
+        type: string
+      error:
+        type: string
+      id:
+        type: integer
+      mtime:
+        type: string
+      order_id:
+        type: integer
+      start_time:
+        type: string
+      status:
+        type: string
     type: object
   types.HTTPError:
     properties:
@@ -11,83 +29,27 @@ definitions:
     type: object
 info:
   contact: {}
-  description: This is a billing service API.
+  description: This is a delivery service API.
   license:
     name: Apache 2.0
   termsOfService: http://swagger.io/terms/
-  title: Billing API
+  title: Delivery API
   version: "1.0"
 paths:
-  /add_money:
+  /add_courier:
     post:
       consumes:
       - application/json
-      description: add money
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/types.HTTPError'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/types.HTTPError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/types.HTTPError'
-        "405":
-          description: Method Not Allowed
-          schema:
-            $ref: '#/definitions/types.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/types.HTTPError'
-      summary: add money
-      tags:
-      - billing
-  /create_account:
-    get:
-      description: create account
-      responses:
-        "201":
-          description: Created
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/types.HTTPError'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/types.HTTPError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/types.HTTPError'
-        "405":
-          description: Method Not Allowed
-          schema:
-            $ref: '#/definitions/types.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/types.HTTPError'
-      summary: create account
-      tags:
-      - billing
-  /get_balance:
-    get:
-      description: get balance
+      description: get_courier_reservations
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/types.BalanceResponse'
+            items:
+              $ref: '#/definitions/types.CourierReservation'
+            type: array
         "400":
           description: Bad Request
           schema:
@@ -108,7 +70,38 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/types.HTTPError'
-      summary: get balance
+      summary: get_courier_reservations
       tags:
-      - billing
+      - delivery
+  /confirm_delivered:
+    post:
+      consumes:
+      - application/json
+      description: confirm_delivered
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/types.HTTPError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/types.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/types.HTTPError'
+        "405":
+          description: Method Not Allowed
+          schema:
+            $ref: '#/definitions/types.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/types.HTTPError'
+      summary: confirm_delivered
+      tags:
+      - delivery
 swagger: "2.0"
